# LibreTextus

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  config.mk  libre-textus.desktop  libretextus.desktop  libretextus_raw.desktop
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: #main_window.glade#  biblebooks.xml  dark.css  default.css  interface.glade  interface.glade~  light.css  main_window.glade  main_window.glade~  settings.xml  settings.yml  sources.yml  template.css
data/books/: de.yaml  en.yaml
doc/: LibreTextus.1
include/SearchEngine/: SearchEngine.cpp  SearchEngine.hpp
include/markdown/: markdown.hpp  tagged_char.hpp
include/tsl/: LICENSE
po/: POTFILES.in  de_CH.po  de_CH.po~  de_DE.po  en_UK.po  en_US.po  libretextus.pot
snap/: snapcraft.yaml
src/: dialog_window.hpp  exporter.cpp  exporter.hpp  framework.cpp  framework.hpp  history_button.cpp  history_button.hpp  log.hpp  main.cpp  notebook.cpp  notebook.hpp  package_manager.cpp  package_manager.hpp  path.cpp  path.hpp  quick_search.hpp  search_engine.cpp  search_engine.hpp  settings.hpp  signal_handler.cpp  signal_handler.hpp  source_handler.cpp  source_handler.hpp  splash_screen.hpp  text_view.cpp  text_view.hpp  widgets.hpp  window.cpp  window.hpp
src/book_matrix/: book_matrix.cpp  book_matrix.hpp  xml_converter.cpp  xml_converter.hpp
src/book_matrix/primes/: primes.cpp  primes.hpp
src/dialog_window/: init.cpp
src/exporter/: exporter.cpp  exporter.hpp
src/framework/: css.cpp  filesystem.cpp  framework.hpp  init.cpp  locale.cpp  run.cpp  signals.cpp
src/grammar/: grammar.cpp  grammar.hpp
src/history_button/: history.cpp  history_button.cpp  history_button.hpp  user_interaction.cpp
src/log/: log.cpp  log.hpp
src/notebook/: file.cpp  gui.cpp  init.cpp  notebook.hpp  properties.cpp  tags.cpp  user_interaction.cpp
src/notebook/nav_modes/: mode.hpp  vi.cpp  vi.hpp
src/package_manager/: activity.cpp  database.cpp  dispatcher.cpp  file.cpp  gui.cpp  init.cpp  install.cpp  package_manager.hpp  remove.cpp  runtime_list.cpp  update.cpp
src/path/: data.cpp  home.cpp  path.hpp
src/rapid_textus/: init.cpp  rapid_textus.hpp  search.cpp  sources.cpp
src/search_engine/: get_var.cpp  init.cpp  interpret_argument.cpp  interpret_string.cpp  mark_result.cpp  search.cpp  search_engine.hpp  set_var.cpp  thread.cpp
src/search_engine/search_argument/: get.cpp  modify.cpp  search_argument.hpp
src/settings/: get.cpp  set.cpp  settings.hpp
src/signal_handler/: combo_box.cpp  exporter.cpp  init.cpp  menu.cpp  notebook.cpp  preferences.cpp  quit.cpp  replace.cpp  search.cpp  search_entry.cpp  signal_handler.hpp  source.cpp  tabs.cpp  text_view.cpp  thread.cpp  widgets.cpp
src/source_handler/: book_map.hpp  source_handler.cpp  source_handler.hpp
src/splash_screen/: splash_screen.cpp  splash_screen.hpp
src/text_view/: note.cpp  signals.cpp  text_view.cpp  text_view.hpp
src/text_view/tab/: tab.hpp
src/text_view/tab/verse/: verse.cpp  verse.hpp
src/tolowermap/: tolowermap.hpp
src/window/: dialog.hpp  preferences.hpp  window.cpp  window.hpp
src/window/about/: about.cpp  about.hpp
src/window/dialog/: dialog.cpp  dialog.hpp
src/window/main/: connect_signal.cpp  create_menu.cpp  get_value.cpp  init.cpp  main.hpp  set_value.cpp
src/window/main/header/: header.cpp  header.hpp
src/window/main/header/element/: combo.cpp  element.hpp  get_value.cpp  init.cpp
src/window/main/menu/: init.cpp  menu.hpp
src/window/main/menu/element/: element.hpp
src/window/main/search_section/: get_value.cpp  init.cpp  search_section.hpp
src/window/main/signals/: combo.cpp  exporter.cpp  menu.cpp  notebook.cpp  quit.cpp  replace.cpp  search.cpp  search_entry.cpp  source.cpp  tabs.cpp  text_view.cpp  thread.cpp
src/window/main/view_pane/: get_value.cpp  init.cpp  view_pane.hpp
src/window/main/view_pane/grammar_view/: grammar_view.cpp  grammar_view.hpp
src/window/preferences/: get_values.cpp  init_chilren.cpp  panes.hpp  preferences.cpp  preferences.hpp
src/window/preferences/panes/: book_manager_pane.cpp  book_manager_pane.hpp  keybindings_pane.cpp  keybindings_pane.hpp  user_inferface_pane.cpp  user_inferface_pane.hpp
src/window/preferences/panes/elements/: book_list.cpp  book_list.hpp  book_view.hpp  default.hpp  manage_buttons.cpp  manage_buttons.hpp  shortcut_button.cpp  shortcut_button.hpp
src/window/preferences/signals/: book_manager.cpp  user_interface.cpp
src/window/splash_screen/: splash_screen.cpp
test/: md_test.cpp
